# parser

./: ARCHITECTURE.md  README.md  WIRESHARK_GAP_ANALYSIS.md  install.sh  pyproject.toml  pyrightconfig.json  setup-hooks.sh  setup.py
docs/: j-message-definition-template.jsonc  mil-std-3011-jreap-c-plugin-guide.md  mil-std-6016-j-message-transcription-guide.md  transcription-guide.md
docs/jreap-c-plugin-template/: .gitignore  Makefile  README.md  pyproject.toml
docs/jreap-c-plugin-template/jreap_decoder/: __init__.py  decoder.py
docs/jreap-c-plugin-template/tests/: test_jreap_c.py
hooks/: pre-commit
jreap_parser/: __init__.py  __main__.py
jreap_parser/cli/: shell.py
jreap_parser/core/: __init__.py  interfaces.py  types.py
jreap_parser/encapsulation/: __init__.py  detect.py  jreap_c.py  simple.py  siso_j.py
jreap_parser/ingestion/: pcap_reader.py
jreap_parser/link16/: parser.py
jreap_parser/output/: __init__.py  coords.py  nineline.py  tacrep.py
jreap_parser/tracks/: database.py
link16_parser/: __init__.py  __main__.py
link16_parser/cli/: __init__.py  shell.py
link16_parser/core/: __init__.py  interfaces.py  types.py
link16_parser/encapsulation/: __init__.py  detect.py  jreap_c.py  simple.py  siso_j.py
link16_parser/link16/: __init__.py  (+1 more)
scripts/: validate_definitions.py
tests/: builders.py  conftest.py  test_definition_decoder.py  test_definition_loader.py  test_e2e.py  test_encap_plugin.py  test_encapsulation.py  test_ingestion.py  test_link16_parser.py  test_network.py  test_output.py  test_schema_validation.py  test_track_database.py
(+31 files in other folders)
