[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "link16-parser"
version = "0.1.0"
description = "Link 16 PCAP parser and TACREP report generator"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "pyright>=1.1"]

[project.scripts]
link16-parser = "link16_parser.__main__:main"

[tool.setuptools.packages.find]
include = ["link16_parser*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
